--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="assets/css/loader-style.css">
