--- a/userManager.html
+++ b/userManager.html
@@ -241,6 +241,9 @@
 
                                 </table>
                             </div>
+                            <div id="contentDetail" style="display:none">
+                                <h4>hello world</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
