--- a/statics.html
+++ b/statics.html
@@ -85,8 +85,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="index.html" title="统计面板" style="background: #00C1DE;">
-                                <i class="icon-graph-pie"></i>
+                            <a class="tooltip-tip ajax-load" href="index.html" title="统计面板"> <i class="icon-graph-pie"></i>
                                 <span>统计面板</span>
                             </a>
                         </li>
@@ -103,7 +102,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="statics.html" title="用量统计">
+                            <a class="tooltip-tip ajax-load" href="statics.html" title="用量统计" style="background: #00C1DE;">
                                 <i class="icon-document"></i>
                                 <span>用量统计</span>
                             </a>
@@ -212,7 +211,7 @@
                                         <div style="width: 50%" class="bar"></div>
                                     </div>
                                     <div class="profit-line">
-                                        <span class="entypo-down-circled"></span> &nbsp;50% From Last Month
+                                        <span class="entypo-down-circled"></span> &nbsp;区划APP访问总量
                                     </div>
 
                                 </div>
