--- a/staticsAdminis.html
+++ b/staticsAdminis.html
@@ -85,19 +85,18 @@
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="index.html" title="统计面板" style="background: #00C1DE;">
-                                <i class="icon-graph-pie"></i>
+                            <a class="tooltip-tip ajax-load" href="index.html" title="统计面板"> <i class="icon-graph-pie"></i>
                                 <span>统计面板</span>
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="staticsEngineer.html" title="工程统计">
+                            <a class="tooltip-tip ajax-load" href="index.html" title="工程统计">
                                 <i class="icon-graph-line"></i>
                                 <span>工程统计</span>
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="staticsAdminis.html" title="区域统计">
+                            <a class="tooltip-tip ajax-load" href="index.html" title="区域统计" style="background: #00C1DE;">
                                 <i class="icon-graph-bar"></i>
                                 <span>区域统计</span>
                             </a>
