--- a/userManager.html
+++ b/userManager.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/detail.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/loader-style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -22,6 +23,8 @@
     <link href="assets/js/footable/css/footable-demos.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/js/dataTable/lib/jquery.dataTables/css/DT_bootstrap.css">
     <link rel="stylesheet" href="assets/js/dataTable/css/datatables.responsive.css">
+    <link rel="stylesheet" href="lib/bootstrap-notify/css/bootstrap-notify.css">
+    <script src="lib/bootstrap-notify/js/bootstrap-notify.js"></script>
 
 </head>
 
@@ -89,13 +92,13 @@
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="index.html" title="工程统计">
+                            <a class="tooltip-tip ajax-load" href="staticsEngineer.html" title="工程统计">
                                 <i class="icon-graph-line"></i>
                                 <span>工程统计</span>
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="index.html" title="区域统计">
+                            <a class="tooltip-tip ajax-load" href="staticsAdminis.html" title="区域统计">
                                 <i class="icon-graph-bar"></i>
                                 <span>区域统计</span>
                             </a>
@@ -129,7 +132,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="tooltip-tip ajax-load" href="http://www.gb18306.cn" title="Icons">
+                            <a class="tooltip-tip ajax-load" href="http://www.gb18306.cn" target="_blank" title="Icons">
                                 <i class="icon-preview"></i>
                                 <span>地震区划参数查询</span>
                             </a>
@@ -152,14 +155,14 @@
                         </li>
 
                         <li>
-                            <a class="tooltip-tip" href="userManager.html" title="声明">
+                            <a class="tooltip-tip" href="#" title="声明">
                                 <i class="icon-warning"></i>
                                 <span>声明</span>
                             </a>
                         </li>
 
                         <li>
-                            <a class="tooltip-tip" href="userManager.html" title="联系我们">
+                            <a class="tooltip-tip" href="#" title="联系我们">
                                 <i class="icon-phone"></i>
                                 <span>联系我们</span>
                             </a>
@@ -196,7 +199,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="body-nest" id="Footable">
+                            <div class="body-nest departmentlist" id="Footable">
                                 <div class="row header" style="margin:0px;">
                                     <ul class="list-inline">
                                         <li>
@@ -218,31 +221,102 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <table class="table-striped footable-res footable metro-blue" data-page-size="10">
-                                    <thead>
-                                        <tr>
-                                            <th class="footable-sortable"><input id="chkAll" type="checkbox"></th>
-                                            <th>单位名称</th>
-                                            <th>单位IP地址</th>
-                                            <th>单位地址</th>
-                                            <th>备注</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="tableContent">
-                                    </tbody>
+                                <div id="admTable">
+                                    <table class="table-striped footable-res footable metro-blue" data-page-size="10">
+                                        <thead>
+                                            <tr>
+                                                <th class="footable-sortable"><input id="chkAll" type="checkbox"></th>
+                                                <th>单位名称</th>
+                                                <th>单位IP地址</th>
+                                                <th>单位地址</th>
+                                                <th>备注</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="tableContent">
+                                        </tbody>
 
-                                    <tfoot>
-                                        <tr>
-                                            <td colspan="5">
-                                                <div class="pagination pagination-centered pull-right"></div>
-                                            </td>
-                                        </tr>
-                                    </tfoot>
-
-                                </table>
+                                        <tfoot class="tfooter loading-light">
+                                            <tr>
+                                                <td colspan="8" style="height:34px;">
+                                                    <div class="pagination pagination-centered pull-right"></div>
+                                                </td>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </div>
                             </div>
                             <div id="contentDetail" style="display:none">
-                                <h4>hello world</h4>
+                                <div class="ibox">
+                                    <div class="ibox-content">
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <div class="m-b-md">
+                                                    <a href="#" class="btn btn-white btn-xs backBtn pull-right">返回</a>
+                                                    <a href="#" id="btnEdit" class="btn btn-white btn-xs pull-right">编辑项目</a>
+                                                    <h2 class="userTitle">阿里巴巴集团</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div id="detial-map"></div>
+                                            </div>
+                                        </div>
+                                        <div id="detial-info" class="col-md-12">
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="body-nest" id="Footable" style="padding:0px;">
+                                                    <div class="row header" style="margin:0px;">
+                                                        <ul class="list-inline">
+                                                            <li>
+                                                                <p class="sub-title">单位用户列表</p>
+                                                            </li>
+                                                            <li class="pull-right">
+                                                                <button id="btnDeleteUser" class="btn btn-blue" type="submit"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 删除用户</button>
+                                                            </li>
+                                                            <li class="pull-right">
+                                                                <button id="btnUpdateUser" class="btn btn-blue" type="submit"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 编辑用户</button>
+                                                            </li>
+                                                            <li class="pull-right">
+                                                                <button id="btnAddUser" class="btn btn-blue" type="submit"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 添加用户</button>
+                                                            </li>
+                                                            <li class="pull-right">
+                                                                <button id="btnImportUser" class="btn btn-blue" type="submit"><span class="glyphicon glyphicon-import" aria-hidden="true"></span> 导入用户 </button>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                    <div id="userTable">
+                                                        <table class="table-striped footable-user-res footable metro-blue" data-page-size="20">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th class="footable-sortable"><input id="chkAll" type="checkbox"></th>
+                                                                    <th>用户名</th>
+                                                                    <th>别名</th>
+                                                                    <th>角色</th>
+                                                                    <th>联系电话</th>
+                                                                    <th>邮箱地址</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody class="userContent">
+                                                            </tbody>
+
+                                                            <tfoot>
+                                                                <tr>
+                                                                    <td colspan="6">
+                                                                        <div class="pagination pagination-centered pull-right"></div>
+                                                                    </td>
+                                                                </tr>
+                                                            </tfoot>
+
+                                                        </table>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -355,10 +429,10 @@
                             <div class="form-group">
                                 <label for="ufield-6" class="control-label">角色</label>
                                 <select id="ufield-6" class="form-control">
-                    <option value="123">超级管理员</option>
-                    <option value="456">单位管理员</option>
-                    <option value="789">采集员</option>
-                </select>
+                                    <option value="123">超级管理员</option>
+                                    <option value="456">单位管理员</option>
+                                    <option value="789">采集员</option>
+                                </select>
                             </div>
                         </div>
                     </div>
@@ -376,6 +450,7 @@
                             </div>
                         </div>
                     </div>
+                    <p id="addContent"></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
@@ -453,6 +528,7 @@
             </div>
         </div>
     </div>
+    <div class='notifications top-right'></div>
 
 
     <!-- MAIN EFFECT -->
@@ -464,13 +540,16 @@
     <script type="text/javascript" src="assets/js/skin-select/jquery.cookie.js"></script>
     <script type="text/javascript" src="assets/js/skin-select/skin-select.js"></script>
 
+
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=GGvhGfDF6GyuDoE1l2MFkzVC"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+
     <!-- /MAIN EFFECT -->
     <!-- GAGE -->
     <script type="text/javascript" src="assets/js/toggle_close.js"></script>
     <script src="assets/js/footable/js/footable.js?v=2-0-1" type="text/javascript"></script>
     <script src="assets/js/footable/js/footable.sort.js?v=2-0-1" type="text/javascript"></script>
     <script src="assets/js/footable/js/footable.filter.js?v=2-0-1" type="text/javascript"></script>
-    <script src="assets/js/footable/js/footable.paginate.js?v=2-0-1" type="text/javascript"></script>
     <script src="assets/js/footable/js/footable.paginate.js?v=2-0-1" type="text/javascript"></script>
 
     <script src="lib/require.js" type="text/javascript"></script>
