--- a/statics.html
+++ b/statics.html
@@ -30,7 +30,7 @@
 
 <body>
     <!-- TOP NAVBAR -->
-    <nav role="navigation" class="navbar navbar-static-top">
+    <nav role="navigation" class="navbar navbar-static-top" style="margin-left: 240px;">
         <div class="container-fluid">
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <div class="navbar-title">
@@ -40,7 +40,7 @@
                 <ul style="margin-right:25px;" class="nav navbar-nav navbar-right">
                     <li>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <img alt="" class="admin-pic img-circle" src="http://api.randomuser.me/portraits/thumb/men/10.jpg"> 欢迎， 陈波 <b class="caret"></b>
+                            <img alt="" class="admin-pic img-circle" src="images/user.png"> 欢迎， 陈波 <b class="caret"></b>
                         </a>
                         <ul style="margin-top:14px;" role="menu" class="dropdown-setting dropdown-menu">
                             <li>
@@ -78,7 +78,7 @@
         <div class="skin-part">
             <div id="tree-wrap">
                 <div class="side-bar">
-                    <ul class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="widget-menu"></span> <i data-toggle="tooltip" class="entypo-cog pull-right config-wrap"></i>
@@ -110,7 +110,7 @@
 
                     </ul>
 
-                    <ul class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="design-kit"></span>
@@ -138,7 +138,7 @@
 
                     </ul>
 
-                    <ul id="menu-showhide" class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="component"></span>
@@ -178,7 +178,7 @@
 
     <!--  PAPER WRAP -->
 
-    <div class="wrap-fluid">
+    <div class="wrap-fluid" style="width: auto; margin-left: 250px;">
         <div class="container-fluid paper-wrap bevel tlbr">
             <div class="content-wrap">
                 <div class="row">
