--- a/engineeringList.html
+++ b/engineeringList.html
@@ -23,6 +23,9 @@
     <link href="assets/js/footable/css/footable-demos.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/js/dataTable/lib/jquery.dataTables/css/DT_bootstrap.css">
     <link rel="stylesheet" href="assets/js/dataTable/css/datatables.responsive.css">
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
+
+    <link href="lib/pagination/pagination.css" rel="stylesheet">
 
 </head>
 
@@ -30,7 +33,7 @@
 
 <body>
     <!-- TOP NAVBAR -->
-    <nav role="navigation" class="navbar navbar-static-top">
+    <nav role="navigation" class="navbar navbar-static-top" style="margin-left: 240px;">
         <div class="container-fluid">
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <div class="navbar-title">
@@ -40,7 +43,7 @@
                 <ul style="margin-right:25px;" class="nav navbar-nav navbar-right">
                     <li>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <img alt="" class="admin-pic img-circle" src="http://api.randomuser.me/portraits/thumb/men/10.jpg"> 欢迎， 陈波 <b class="caret"></b>
+                            <img alt="" class="admin-pic img-circle" src="images/user.png"> 欢迎， 陈波 <b class="caret"></b>
                         </a>
                         <ul style="margin-top:14px;" role="menu" class="dropdown-setting dropdown-menu">
                             <li>
@@ -78,7 +81,7 @@
         <div class="skin-part">
             <div id="tree-wrap">
                 <div class="side-bar">
-                    <ul class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="widget-menu"></span> <i data-toggle="tooltip" class="entypo-cog pull-right config-wrap"></i>
@@ -111,7 +114,7 @@
 
                     </ul>
 
-                    <ul class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="design-kit"></span>
@@ -139,7 +142,7 @@
 
                     </ul>
 
-                    <ul id="menu-showhide" class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="component"></span>
@@ -179,7 +182,7 @@
 
     <!--  PAPER WRAP -->
 
-    <div class="wrap-fluid">
+    <div class="wrap-fluid" style="width: auto; margin-left: 250px;">
         <div class="container-fluid paper-wrap bevel tlbr">
             <div class="content-wrap">
                 <div class="row">
@@ -233,10 +236,10 @@
                                         </thead>
                                         <tbody class="tableContent">
                                         </tbody>
-                                        <tfoot class="loading-light">
+                                        <tfoot class="tfooter loading-light">
                                             <tr>
                                                 <td colspan="8" style="height:34px;">
-                                                    <div class="pagination pagination-centered pull-right"></div>
+                                                    <div id="pagination" class="pagination-jq pull-right"></div>
                                                 </td>
                                             </tr>
                                         </tfoot>
@@ -649,20 +652,19 @@
     <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
 
+    <script src="lib/pagination/jquery.pagination.js"></script>
+
     <!-- /MAIN EFFECT -->
     <!-- GAGE -->
     <script type="text/javascript" src="assets/js/toggle_close.js"></script>
     <script src="assets/js/footable/js/footable.js?v=2-0-1" type="text/javascript"></script>
-    <script src="assets/js/footable/js/footable.sort.js?v=2-0-1" type="text/javascript"></script>
-    <script src="assets/js/footable/js/footable.filter.js?v=2-0-1" type="text/javascript"></script>
-    <script src="assets/js/footable/js/footable.paginate.js?v=2-0-1" type="text/javascript"></script>
 
     <script src="lib/require.js" type="text/javascript"></script>
     <script type="text/javascript" src="app/config/requireConfig.js"></script>
     <script type="text/javascript" src="app/config/config.js"></script>
 
     <script type="text/javascript">
-        require(["application/engineer"], function(engineer) {
+        require(["modules/engineer"], function(engineer) {
             var engineer = new engineer(configOptions);
         });
     </script>
