--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <!-- TOP NAVBAR -->
-    <nav role="navigation" class="navbar navbar-static-top">
+    <nav role="navigation" class="navbar navbar-static-top" style="margin-left: 240px;">
         <div class="container-fluid">
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <div class="navbar-title">
@@ -40,7 +40,7 @@
                 <ul style="margin-right:25px;" class="nav navbar-nav navbar-right">
                     <li>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <img alt="" class="admin-pic img-circle" src="http://api.randomuser.me/portraits/thumb/men/10.jpg"> 欢迎， 陈波 <b class="caret"></b>
+                            <img alt="" class="admin-pic img-circle" src="images/user.png"> 欢迎， 陈波 <b class="caret"></b>
                         </a>
                         <ul style="margin-top:14px;" role="menu" class="dropdown-setting dropdown-menu">
                             <li>
@@ -78,7 +78,7 @@
         <div class="skin-part">
             <div id="tree-wrap">
                 <div class="side-bar">
-                    <ul class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="widget-menu"></span> <i data-toggle="tooltip" class="entypo-cog pull-right config-wrap"></i>
@@ -111,7 +111,7 @@
 
                     </ul>
 
-                    <ul class="topnav menu-left-nest">
+                    <ul class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="design-kit"></span>
@@ -139,7 +139,7 @@
 
                     </ul>
 
-                    <ul id="menu-showhide" class="topnav menu-left-nest">
+                    <ul id="menu-showhide" class="topnav menu-left-nest" style="margin: 10px;">
                         <li>
                             <a href="#" style="border-left:0px solid!important;" class="title-menu-left">
                                 <span class="component"></span>
@@ -179,51 +179,134 @@
 
     <!--  PAPER WRAP -->
 
-    <div class="wrap-fluid">
+    <div class="wrap-fluid" style="width: auto; margin-left: 250px;">
         <div class="container-fluid paper-wrap bevel tlbr">
-            <div class="content-wrap">
+
+            <div id="paper-middle">
+                <div id="map-user" style="height:400px;">
+                </div>
+            </div>
+            <div class="content-wrap" style="margin-top:20px;">
+
                 <div class="row">
-                    <div class="col-md-4">
-                        <div id="RealTimeClose" class="nest">
-                            <div class="title-alt">
-                                <h6 class="chartTitle">
-                                    <i class="icon-graph-line"></i> &nbsp;用量统计
-                                </h6>
+
+                    <div class="col-lg-3">
+                        <div class="order" id="orderClose">
+                            <div class="headline ">
+                                <h3>
+                                    <span>
+                                        <i class="entypo-users"></i>&nbsp;&nbsp;单位统计</span>
+                                </h3>
                                 <div class="titleClose">
-                                    <a class="gone" href="#RealTimeClose">
+                                    <a href="#orderClose" class="gone">
                                         <span class="entypo-cancel"></span>
                                     </a>
                                 </div>
-                                <div class="titleToggle">
-                                    <a class="nav-toggle-alt" href="#RealTime">
-                                        <span class="entypo-up-open"></span>
+                            </div>
+                            <div class="value">
+                                <span><i class="entypo-users"></i>
+                                </span><b id="speed">28</b><b>个</b>
+                            </div>
+                            <div class="progress-tinny">
+                                <div style="width: 10%" class="bar"></div>
+                            </div>
+                            <div class="profit-line">
+                                <i class="entypo-star"></i>&nbsp;&nbsp;单位数量统计</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="profit" id="profitClose">
+                            <div class="headline ">
+                                <h3>
+                                    <span>
+                                        <i class="entypo-network"></i>&nbsp;&nbsp;工程统计</span>
+                                </h3>
+                                <div class="titleClose">
+                                    <a href="#profitClose" class="gone">
+                                        <span class="entypo-cancel"></span>
                                     </a>
                                 </div>
                             </div>
-                            <div id="RealTime" style="min-height:250px;padding-top:20px;" class="body-nest">
-                                <div class=" member" id="memberClose">
-                                    <div class="value">
-                                        <span>
-                                    <i class="maki-warehouse"></i>
-                                </span> 9425
-                                        <b>次</b>
-                                    </div>
-                                    <div class="progress-tinny">
-                                        <div style="width: 50%" class="bar"></div>
-                                    </div>
-                                    <div class="profit-line">
-                                        <span class="entypo-down-circled"></span> &nbsp;50% From Last Month
-                                    </div>
+                            <div class="value">
+                                <span><i class="entypo-network clock-position"></i>
+                                </span><b id="speed">279</b><b>次</b>
+                            </div>
 
+                            <div class="progress-tinny">
+                                <div style="width: 50%" class="bar"></div>
+                            </div>
+                            <div class="profit-line">
+                                <span class="entypo-star"></span>&nbsp;&nbsp; 建设工程许可备案记录数</div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-lg-3">
+                        <div class="revenue" id="revenueClose">
+                            <div class="headline ">
+                                <h3>
+                                    <span>
+                                        <i class="entypo-address"></i>&nbsp;&nbsp;区域统计</span>
+                                </h3>
+                                <div class="titleClose">
+                                    <a href="#revenueClose" class="gone">
+                                        <span class="entypo-cancel"></span>
+                                    </a>
                                 </div>
                             </div>
+                            <div class="value">
+                                <span><i class="entypo-address clock-position"></i>
+                                </span><b id="speed">52</b><b>次</b>
+                            </div>
+                            <div class="progress-tinny">
+
+                                <div style="width: 25%" class="bar"></div>
+                            </div>
+                            <div class="profit-line">
+                                <i class="entypo-star"></i>&nbsp;&nbsp;村镇地震区划记录数</div>
                         </div>
                     </div>
-                    <div class="col-md-8">
+
+
+
+                    <div class="col-lg-3">
+                        <div class=" member" id="memberClose">
+                            <div class="headline ">
+                                <h3>
+                                    <span>
+                                        <i class="entypo-shareable"></i>&nbsp;&nbsp;用量统计
+                                    </span>
+                                </h3>
+                                <div class="titleClose">
+                                    <a href="#memberClose" class="gone">
+                                        <span class="entypo-cancel"></span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="value">
+                                <span><i class="entypo-shareable"></i>
+                                </span>9425<b>次</b>
+                            </div>
+                            <div class="progress-tinny">
+                                <div style="width: 50%" class="bar"></div>
+                            </div>
+                            <div class="profit-line">
+                                <span class="entypo-star"></span>&nbsp;区划APP访问总量</div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="content-wrap">
+                <div class="row">
+                    <div class="col-md-12">
                         <div id="RealTimeClose" class="nest">
                             <div class="title-alt">
                                 <h6 class="chartTitle">
-                                    <i class="icon-graph-line"></i> &nbsp;近期APP访问量变化趋势
+                                    <i class="icon-graph-line"></i> &nbsp;近期统计量变化趋势
                                 </h6>
                                 <div class="titleClose">
                                     <a class="gone" href="#RealTimeClose">
@@ -237,130 +320,13 @@
                                 </div>
                             </div>
                             <div id="RealTime" style="min-height:250px;" class="body-nest">
-                                <div id="echarts-line-chart" style="height:250px; margin-top: -40px;">
+                                <div id="echarts-line-chart" style="height:300px; ">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="content-wrap">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div id="siteClose" class="nest">
-                            <div class="title-alt">
-                                <h6 class="chartTitle">
-                                    <span class="fontawesome-list-ul"></span> &nbsp;区划APP访问来源(列表)
-                                </h6>
-                                <div class="titleClose">
-                                    <a class="gone" href="#siteClose">
-                                        <span class="entypo-cancel"></span>
-                                    </a>
-                                </div>
-                                <div class="titleToggle">
-                                    <a class="nav-toggle-alt" href="#site">
-                                        <span class="entypo-up-open"></span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div id="site" class="body-nest" style="min-height:345px;">
-                                <table id="table-container" class="table-striped footable-res footable metro-blue" data-page-size="5">
-                                    <thead>
-                                        <tr>
-                                            <th>单位名称</th>
-                                            <th>访问量</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="tableContent">
-                                    </tbody>
-                                    <tfoot class="tfooter loading-light">
-                                        <tr>
-                                            <td colspan="2" style="height:34px;">
-                                                <div class="pagination pagination-centered pull-right"></div>
-                                            </td>
-                                        </tr>
-                                    </tfoot>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div id="RealTimeClose" class="nest">
-                            <div class="title-alt">
-                                <h6 class="chartTitle">
-                                    <i class="icon-graph-pie"></i></span> &nbsp;区划APP访问来源(饼状图)
-                                </h6>
-                                <div class="titleClose">
-                                    <a class="gone" href="#RealTimeClose">
-                                        <span class="entypo-cancel"></span>
-                                    </a>
-                                </div>
-                                <div class="titleToggle">
-                                    <a class="nav-toggle-alt" href="#RealTime">
-                                        <span class="entypo-up-open"></span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div id="RealTime" style="min-height:345px;padding-top:20px;" class="body-nest">
-                                <div id="piechart" style="height:310px;">
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-wrap">
-                <div class="row">
-
-                    <div class="col-lg-12">
-                        <div id="RealTimeClose" class="nest">
-                            <div class="title-alt">
-                                <h6 class="chartTitle">
-                                    <i class="icon-graph-bar"></i> &nbsp;区划APP访问来源(柱状图)
-                                </h6>
-                                <div class="titleClose">
-                                    <a class="gone" href="#RealTimeClose">
-                                        <span class="entypo-cancel"></span>
-                                    </a>
-                                </div>
-                                <div class="titleToggle">
-                                    <a class="nav-toggle-alt" href="#RealTime">
-                                        <span class="entypo-up-open"></span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div id="RealTime" style="min-height:345px;padding-top:20px;" class="body-nest">
-                                <div id="echarts-bar-chart" style="height:310px;">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-wrap">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="nest" id="FootableClose">
-                            <div class="title-alt">
-                                <div class="btn-group typeswitch" role="group">
-                                    <button id="pointmap" type="button" class="btn btn-default select"><span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span> 点云图</button>
-                                    <button id="staticmap" type="button" class="btn btn-default "><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 聚合图</button>
-                                    <button id="heatmap" type="button" class="btn btn-default"><span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span> 热点图</button>
-                                </div>
-                            </div>
-                            <div style="padding:0;" class="body-nest">
-                                <div id="mapDiv" style="width:100%;height:600px;position:relative;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
 
             <!-- FOOTER -->
             <div class="footer-space"></div>
@@ -413,8 +379,8 @@
     <script type="text/javascript" src="app/config/config.js"></script>
 
     <script type="text/javascript">
-        require(['modules/statics'], function(statics) {
-            var statics = new statics(configOptions);
+        require(['modules/main'], function(main) {
+            var main = new main(configOptions);
         });
     </script>
 
