--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </div>
                             <div class="value">
                                 <span><i class="entypo-users"></i>
-                                </span><b id="speed">28</b><b>个</b>
+                                </span><b id="departNum" class="bigSizeNum">0</b><b>个</b>
                             </div>
                             <div class="progress-tinny">
                                 <div style="width: 10%" class="bar"></div>
@@ -229,7 +229,7 @@
                             </div>
                             <div class="value">
                                 <span><i class="entypo-network clock-position"></i>
-                                </span><b id="speed">279</b><b>次</b>
+                                </span><b id="engineerNum" class="bigSizeNum">0</b><b>次</b>
                             </div>
 
                             <div class="progress-tinny">
@@ -256,7 +256,7 @@
                             </div>
                             <div class="value">
                                 <span><i class="entypo-address clock-position"></i>
-                                </span><b id="speed">52</b><b>次</b>
+                                </span><b id="localNum" class="bigSizeNum">0</b><b>次</b>
                             </div>
                             <div class="progress-tinny">
 
@@ -285,7 +285,7 @@
                             </div>
                             <div class="value">
                                 <span><i class="entypo-shareable"></i>
-                                </span>9425<b>次</b>
+                                </span><b id="clickNum" class="bigSizeNum">0</b><b>次</b>
                             </div>
                             <div class="progress-tinny">
                                 <div style="width: 50%" class="bar"></div>
