--- a/statics.html
+++ b/statics.html
@@ -204,7 +204,7 @@
                                     <div class="value">
                                         <span>
                                     <i class="maki-warehouse"></i>
-                                </span> 9425
+                                </span><b id="clickNum" class="bigSizeNum">0</b>
                                         <b>次</b>
                                     </div>
                                     <div class="progress-tinny">
