--- a/staticsEngineer.html
+++ b/staticsEngineer.html
@@ -205,7 +205,7 @@
                                     <div class="value">
                                         <span>
                                     <i class="entypo-network"></i>
-                                </span> 279
+                                </span><b id="engineerNum" class="bigSizeNum">0</b>
                                         <b>次</b>
                                     </div>
                                     <div class="progress-tinny">
