--- a/staticsAdminis.html
+++ b/staticsAdminis.html
@@ -205,7 +205,7 @@
                                     <div class="value">
                                         <span>
                                     <i class="maki-warehouse"></i>
-                                </span> 9425
+                                </span><b id="localNum" class="bigSizeNum">0</b>
                                         <b>次</b>
                                     </div>
                                     <div class="progress-tinny">
