增加检索功能

--- a/engineeringList.html
+++ b/engineeringList.html
@@ -205,7 +205,7 @@
                                             <form id="searchDiv">
                                                 <div class="form-group has-feedback">
                                                     <span class="twitter-typeahead" style="position: relative; display: inline-block; direction: ltr;"><input type="text" id="searchBox" class="form-control typeahead tt-input" placeholder="信息检索..." autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;"><pre aria-hidden="true" style="position: absolute; visibility: hidden; white-space: pre; font-family: &quot;Microsoft Yahei&quot;, 微软雅黑, Pinghei; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; word-spacing: 0px; letter-spacing: 0px; text-indent: 0px; text-rendering: auto; text-transform: none;"></pre><span class="tt-dropdown-menu" style="position: absolute; top: 100%; left: 0px; z-index: 100; display: none; right: auto; width: 208px;"><div class="tt-dataset-admin_adrs"></div></span></span>
-                                                    <span class="glyphicon glyphicon-search form-control-feedback nomarl" id="searchButton" aria-hidden="true" style="top:0px;"></span>
+                                                    <span class="glyphicon glyphicon-search form-control-feedback nomarl" id="searchButton" aria-hidden="true" style="top:0px;cursor:pointer;"></span>
                                                 </div>
                                             </form>
                                         </li>
