--- a/engineeringList.html
+++ b/engineeringList.html
@@ -216,7 +216,7 @@
                                             <button id="btnDeleteSelected" class="btn btn-blue" type="submit"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 删除记录</button>
                                         </li>
                                         <li class="pull-right">
-                                            <button id="btnExportTable" class="btn btn-blue" type="submit"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> 导出单位</button>
+                                            <button id="btnExportTable" class="btn btn-blue" type="submit"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span> 导出记录</button>
                                         </li>
                                     </ul>
                                 </div>
