--- a/login.html
+++ b/login.html
@@ -29,18 +29,18 @@
                         </ol>
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img src="images/1.jpg" alt="First slide">
+                                <img src="images/2.jpg" class="img-responsive">
                             </div>
                             <div class="item">
-                                <img src="images/2.jpg" alt="Second slide">
+                                <img src="images/1.jpg" class="img-responsive">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div id="logo-login">
-                        <h1>区划信息管理系统
-                        </h1>
+                        <h2 class="text-center">中国地震动参数区划图服务系统</h2>
+                        <p class="text-center"><small>GB18306-2015</small></p>
                     </div>
                     <div class="account-box">
                         <form role="form">
@@ -67,18 +67,17 @@
                             </div>
                         </div>
                     </div>
-                    <p>&nbsp;</p>
-                    <div class="login-footer" style="text-align:center;margin:0 auto;">
-                        <a href="http://www.cea-igp.ac.cn/">中国地震局地球物理研究所© 公益服务</a>
-                        <div class="info-links ">
-                            <a href="#">鼎越天恒（北京）技术有限公司 技术支持</a>
-                        </div>
-                        <div class="info-links ">
-                            <a href="http://www.cea-igp.ac.cn/ ">联系邮箱: chenbo@cea-igp.ac.cn</a>
-                        </div>
-                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="login-footer">
+        <a href="http://www.cea-igp.ac.cn/">中国地震局地球物理研究所© 公益服务</a>
+        <div class="info-links ">
+            <a href="http://www.dythtech.com">鼎越天恒（北京）技术有限公司 技术支持</a>
+        </div>
+        <div class="info-links ">
+            <a href="mailto:chenbo@cea-igp.ac.cn">联系邮箱: chenbo@cea-igp.ac.cn</a>
         </div>
     </div>
 
