缩略图效果修改

--- a/engineeringList.html
+++ b/engineeringList.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="assets/js/dataTable/css/datatables.responsive.css">
     <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
 
+    <link rel="stylesheet" href="lib/scrollbar/jquery.mCustomScrollbar.min.css">
+    <script src="lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+
     <link href="lib/pagination/pagination.css" rel="stylesheet">
 
 </head>
@@ -379,7 +382,7 @@
     <!--  END OF PAPER WRAP -->
 
     <div id="exportContainer" style="display: none;"></div>
-    <div id="dlgExport" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="caption" aria-hidden="true">
+    <div id="dlgExport" class="modal fade scroll-h" tabindex="-1" role="dialog" aria-labelledby="caption" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
